--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,27 +1,51 @@
 body {
 	margin: 0;
 	padding: 0;
-	color: #302d26;
-	font-family:Arial, Helvetica, sans-serif;
+	color: #ffffff;
+	font-family: Century Gothic Light;
 	font-size: 12px;
 	line-height: 1.4em; 
-	background-color: #ddf9fd;	
+	background-color: #300330;	
+	text-align: center;
 }
 
-a, a:link, a:visited { color: #840000; font-weight: normal; text-decoration: none }
-a:hover { text-decoration: underline; }
+a, a:link, a:visited { 
+	color: #ded5ff; 
+	font-weight: normal; 
+	text-decoration: none 
+}
 
-a.gototop { clear: both; float: right; display:block; margin-top: 40px; padding: 0 15px 10px; font-size: 10px; color: #000; font-weight: 700;background: url(images/gototop.png) no-repeat bottom center }
+a:hover { 
+	color: rgb(255, 239, 166);
+}
 
-p { margin: 0 0 10px 0; padding: 0; }
-img { border: none; }
-em { color: #fff }
-blockquote { font-style: italic; margin: 0 0 20px 0}
-cite { font-weight: bold; color:#840000; }
-cite a, cite a:link, cite a:visited  { font-size: 12px; text-decoration: none; font-style: normal }
-cite span { font-weight: 400; color: #302d26; }
+a.goback { 
+	clear: both; 
+	float: right; 
+	display:block; 
+	margin-top: 40px; 
+	padding: 0 15px 10px; 
+	font-size: 16px; 
+	color: rgb(245, 166, 238); 
+	font-weight: 700;
+	background: url(images/goback.png) no-repeat bottom center 
+}
 
-h1, h2, h3, h4, h5, h6 { color: #000000; font-weight: normal; }
+p { 
+	margin: 60px; 
+	padding: 100; 
+}
+
+img { 
+	border-radius: 8px; 
+	width: 70%;
+}
+
+h1, h2, h3, h4, h5, h6 { 
+	color: #ffcbf4; 
+	font-weight: normal; 
+}
+
 h1 { font-size: 36px; margin: 0 0 30px; padding: 5px 0 }
 h2 { font-size: 24px; margin: 0 0 25px; padding: 5px 0 }
 h3 { font-size: 20px; margin: 0 0 20px; padding: 0; }
@@ -39,34 +63,26 @@ h6 { font-size: 12px; margin: 0 0 5px; padding: 0; font-weight: 700 }
 .float_l { float: left }
 .float_r { float: right }
 
-.list { margin: 10px 0 10px 30px; padding: 0; list-style: bullet }
-.list li { color:#302d26; margin: 0 0 10px 0; padding: 0 5px 0 0; background: url(images/tooplate_list.png) no-repeat scroll 0 5px  }
-.list li a { color: #302d26; font-weight: normal }
-.list li a:hover { color: #302d26 }
 
-#sidebar {
-	position: fixed;
-	width: 240px;
-	text-align: right;
+.list li { 
+	color:#dbdbdb; 
+	text-align: left;
+	margin: 0 0 10px 0; 
+	padding: 0 5px 0 0; 
+	background: url(images/tooplate_list.png) no-repeat scroll 0 5px  
 }
 
 #main {
 	width: 650px;
-	padding: 60px 30px 60px 40px;
+	padding: 30px 30px 100px 200px;
 	float: center;
 }
 
-#site_title { display: block; text-align: right; margin: 80px 0 40px; width: 220px; height: 60px; padding: 20px 10px; background: url(images/tooplate_header.jpg) no-repeat  }
-#site_title a { font-size: 24px; font-family: Georgia, "Times New Roman", Times, serif; font-weight: 700; color: #fff }
-#site_title a span { display: block; margin-top: 5px; font-size: 12px; font-weight: 400; font-family: Tahoma, Geneva, sans-serif }
-
-#services h3 { margin-bottom: 30px }
-#services p { margin-bottom: 30px }
-
-.col_12 { width: 300px }
-
-#map{
-    height: 600px;
-    width: 100%;
-    background-color:azure
+#iframe{
+    height: 150px;
+    width: 300;
+	display: block;
+	margin: 0 auto;
+    overflow:hidden;
+	border: none;
 }
