--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -38,20 +38,51 @@ p {
 
 img { 
 	border-radius: 8px; 
-	width: 70%;
+	width: 70%
 }
 
-h1, h2, h3, h4, h5, h6 { 
+h1, h2, h3, h4, h5 { 
 	color: #ffcbf4; 
 	font-weight: normal; 
 }
 
-h1 { font-size: 36px; margin: 0 0 30px; padding: 5px 0 }
-h2 { font-size: 24px; margin: 0 0 25px; padding: 5px 0 }
-h3 { font-size: 20px; margin: 0 0 20px; padding: 0; }
-h4 { font-size: 16px; margin: 0 0 15px; padding: 0; }
-h5 { font-size: 14px; margin: 0 0 10px; padding: 0;  }
-h6 { font-size: 12px; margin: 0 0 5px; padding: 0; font-weight: 700 }
+h1 { 
+	font-size: 36px; 
+	margin: 0 0 30px; 
+	padding: 5px 0 
+}
+
+h2 { 
+	font-size: 24px; 
+	margin: 0 0 5px;
+	padding: 20px 0
+}
+
+h3 { 
+	font-size: 20px; 
+	margin: 0 0 20px; 
+	padding: 0; 
+}
+
+h4 { 
+	font-size: 16px; 
+	margin: 0 0 15px; 
+	padding: 0; 
+}
+
+h5 { 
+	font-size: 14px; 
+	margin: 0 0 10px; 
+	padding: 0;  
+}
+
+h6 { 
+	font-size: 12px; 
+	margin: 0 0 5px; 
+	padding: 0; 
+	font-weight: 700; 
+	color: white;
+}
 
 .cleaner { clear: both }
 .h10 { height: 10px }
@@ -63,7 +94,6 @@ h6 { font-size: 12px; margin: 0 0 5px; padding: 0; font-weight: 700 }
 .float_l { float: left }
 .float_r { float: right }
 
-
 .list li { 
 	color:#dbdbdb; 
 	text-align: left;
@@ -74,7 +104,7 @@ h6 { font-size: 12px; margin: 0 0 5px; padding: 0; font-weight: 700 }
 
 #main {
 	width: 650px;
-	padding: 30px 30px 100px 200px;
+	padding: 30px 30px 20px 20px;
 	float: center;
 }
 
@@ -83,6 +113,6 @@ h6 { font-size: 12px; margin: 0 0 5px; padding: 0; font-weight: 700 }
     width: 300;
 	display: block;
 	margin: 0 auto;
-    overflow:hidden;
+    overflow: hidden;
 	border: none;
 }
